--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,9 @@ flutter:
     - family: Courgette
       fonts:
         - asset: fonts/Courgette-Regular.ttf
+    - family: Teko
+      fonts:
+        - asset: fonts/Teko-VariableFont_wght.ttf
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
