--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.2
   animations: ^2.0.10
-  animated_expandable_fab: any
+  delayed_display: ^2.0.0
   fl_chart: ^0.66.0
 
 dev_dependencies:
